--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -64,7 +64,7 @@ docs-research:
   - title:      Deep Learning
     children: 
       - title:  DL Overview 
-        url:    /2025-07-10-list-DL-research.md #/2025/07/10/list/DL/research.html
+        url:    /2025/07/10/list-DL-research.html
 
   - title:      Reinforcement Learning
     children:
