--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -102,3 +102,12 @@ docs-hobby:
       - title:  
         url:    
 
+  - title:      Boxing
+    children:
+      - title: 
+        url: 
+      - title:  
+        url:    
+      - title:  
+        url:    
+
