--- a/_config.yml
+++ b/_config.yml
@@ -181,7 +181,8 @@ analytics:
 ##############################
 markdown    : kramdown
 highlighter : rouge
-permalink   : date
+# permalink   : date
+permalink   : /:categories/:year-:month-:day-:title.html
 
 exclude:
   - CHANGELOG.md
