--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -104,8 +104,10 @@ docs-hobby:
 
   - title:      Boxing
     children:
-      - title: 
-        url: 
+      - title: 2025-07-14-Mon 1년만의 복싱
+        url: /Hobby/Boxing/2025-07-14-Mon-1년만의복싱.html
+      - title: 2025-07-15-Tue 잽만 잘 해도
+        url: /Hobby/Boxing/2025-07-15-Tue-잽만잘해도.html
       - title:  
         url:    
       - title:  
