--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -106,7 +106,7 @@ docs-hobby:
       - title:  
         url:    
         
-  - title:      Soccer
+  - title:      Soccer / Futsal
     children:
       - title: 
         url: 
